GNOME Bugzilla – Bug 732683
androidmedia: Unsupported color format 2141391876 (COLOR_QCOM_FormatYVU420SemiPlanar32m)
Last modified: 2014-07-04 12:57:31 UTC
Created attachment 279836 [details] logcat i have moved to that version and after running the new ndk-build and running both my app and android-tutorial-4. my RTSP stream from an IP camera (Edimax branded) failed with the following error: *0:00:36.454885195 0x7d835180 gstamcvideodec.c:529:gst_amc_video_dec_set_src_caps:<amcvideodec-omxqcomvideodecoderavc1> Failed to set up GstAmcColorFormatInfo* On the device i get the following notification: *"Error received from element amcvideodec-omxqcomvideodecoderavc2: Gstreamer encountered a general supporting library error."* *P.S - the same rtsp stream worked with tutorial-4 when using version 1.2.4.1 - but i had issues on several devices (See bug 731370).* Attached is the Zip of the log cat i'm using lg nexus 5 device
The attached logs are empty. Can you attach new logs?
And there should be another error output right above the line you pasted, and especially a bit further up the "Got new output format" output would be interesting
this is the line above that: 0:01:26.009257988 0x7846fa90 gstamc.c:2791:gst_amc_color_format_info_set Unsupported color format 2141391876
Created attachment 279843 [details] log with gstreamer 1.3.90
Created attachment 279846 [details] libgstandroidmedia.a Can you replace lib/gstreamer-1.0/static/libgstandroidmedia.a with this file here and retest? Hopefully that makes it work.
works now on my nexus 5 but it looks a bit un-stable - stream get stuck and blurry sometimes did not happen on version 1.2.4.1 will try again on Sunday and update if this is network related. Thanks
That must be a different problem then. Can you please create a new bug for that? Thanks for testing :) commit 74c2e64d5d1303267cd7b54a4096cd3c47febacc Author: Sebastian Dröge <sebastian@centricular.com> Date: Thu Jul 3 17:53:33 2014 +0200 amc: Properly integrate COLOR_QCOM_FormatYVU420SemiPlanar32m again https://bugzilla.gnome.org/show_bug.cgi?id=732683