amc: Properly integrate COLOR_QCOM_FormatYVU420SemiPlanar32m again

https://bugzilla.gnome.org/show_bug.cgi?id=732683